cp project/force-app/main/default/objects/Payment_Plan_Modification__c/Payment_Plan_Modification__c.object-meta.xml
<CustomObject>
    <description>Audited payment plan modification requests preventing direct schedule overwrite</description>
    <label>Payment Plan Modification</label>
    <nameField>
        <displayFormat>PPM-{YYYY}{MM}-{0000}</displayFormat>
        <label>Modification Request Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Modifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>