cp project/force-app/main/default/objects/Payment_Plan_Modification__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>