cp project/force-app/main/default/objects/Payment_Plan_Modification__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Payment_Plan_Modifications</relationshipName>
    <type>Lookup</type>
</CustomField>