cp project/force-app/main/default/objects/Payment_Plan_Modification__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer</relationshipLabel>
    <relationshipName>Payment_Plan_Modifications</relationshipName>
    <type>Lookup</type>
</CustomField>