cp project/force-app/main/default/objects/Payment_Plan_Modification__c/fields/Modification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Modification_Reason__c</fullName>
    <label>Modification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
                <default>true</default>
                <label>Customer Request</label>
            </value>
            <value>
                <fullName>Loan Delay</fullName>
            </value>
            <value>
                <fullName>Construction Delay</fullName>
            </value>
            <value>
                <fullName>Unit Upgrade</fullName>
            </value>
            <value>
                <fullName>Unit Swap</fullName>
            </value>
            <value>
                <fullName>Commercial Adjustment</fullName>
            </value>
            <value>
                <fullName>Payment Rescheduling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>