cp project/force-app/main/default/objects/Payment_Plan_Modification__c/fields/Original_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Original_Plan_Summary__c</fullName>
    <label>Original Plan Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>