cp project/force-app/main/default/objects/Payment_Plan_Modification__c/fields/Proposed_Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Plan_Details__c</fullName>
    <label>Proposed Plan Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>