cp project/force-app/main/default/objects/Payment_Plan_Modification__c/validationRules/Modification_Requires_Valid_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Modification_Requires_Valid_Reason</fullName>
    <active>true</active>
    <description>Please provide specific details in Other Reason Details when selecting &quot;Other&quot; as the modification reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Modification_Reason__c, &quot;Other&quot;), ISBLANK(Other_Reason_Details__c))</errorConditionFormula>
    <errorMessage>Please provide specific details in Other Reason Details when selecting &quot;Other&quot; as the modification reason.</errorMessage>
</ValidationRule>